@@ -1,5 +1,7 @@
 DIST d0_blind_id-0.1.0_pre.zip 58289 RMD160 29dbfccb22b0f07606d925051df51025f28a7eec SHA1 377a846cea63b57335f03240c168aff0da2ae38a SHA256 8593f24257bb7f9f68c390ec8ea3de0330b06499d2b823c61d4468a5df0f5924
+DIST d0_blind_id-0.3.tar.gz 339418 RMD160 8c82b6de3a13a37031f87cb2152004a54bbd7c7c SHA1 00e8fd282b0677a793b27e36cd622752e76225d2 SHA256 fa2dfe9f09e6305e6ac16b340277086e4899c9db45e22987b3471e5739dbcab1
 EBUILD d0_blind_id-0.1.0_pre.ebuild 1337 RMD160 132d16f4f2824b6a6226f6e4668374a2f8c7dbb9 SHA1 2605716f5ed35f8dcd303231db03b4003fca749d SHA256 5724ed6384bc45dc91aff3468cd7011ad439c92b6f228b576d9510c7a4b3e34f
-EBUILD d0_blind_id-9999.ebuild 1306 RMD160 4ba9bdaf766be303f6459d12f26fc502985e7a1f SHA1 70b11b68251dd9c1dbc18079646a787d557f808c SHA256 25932fdaf9e46869156c746981a4e59c64ca139eac222a597a30652e026d0809
-MISC ChangeLog 424 RMD160 9b1ddd7a64d029d5b538ffe9b6c79d36504d6781 SHA1 95fff027c6b5650dd73c190ab7c3308f3f299a20 SHA256 8f7eea3ba3fd48bea8aca89d915befba18ac231a6d7f4c2ceea6e4b39b89dda4
-MISC metadata.xml 400 RMD160 ed6271ca3a167a90d51d7a92f4f14079b5f768e3 SHA1 7cb87d08cd6c089b3271eceb0bfde739639ddf36 SHA256 dfebaa9573214dde52094cc599e0a6596847d698024e87e16ca2af7b2ee2d3ad
+EBUILD d0_blind_id-0.3.ebuild 1034 RMD160 bb5ac3b03ac5f561535589257b3c5f7ac6340c76 SHA1 8a3a5055ee27a32de06f147072833c799e8b2f62 SHA256 9ddbe989f84caa38fd25a2d46268fe80f6764247df8e9fa2b58a9655c803d1a7
+EBUILD d0_blind_id-9999.ebuild 1069 RMD160 2778c41f7519a4b421843c4a8f61369e2e220bed SHA1 cfbc61af0855629351d7a850f1b36e5e83286a33 SHA256 afe99bd9bb6d722b1d79c6952b57fde3877ac6580faffd44492e9bbebbcec540
+MISC ChangeLog 609 RMD160 14a6174b3f638636b13954b7b19e84c3b5871a5a SHA1 c2d816a16eb5dd518df12b50276acf65bffc83df SHA256 e0eb8e1aeb698c52fb84aa5d1a6262b1d99448fca5c58e8c74377dc135748d81
+MISC metadata.xml 471 RMD160 5fc0261315fc09e9bea298619a643e2f78468e7a SHA1 0f364722f0bbad7ed7e67c20985e887836d74030 SHA256 437f5ad80539aee8f4aa2d7ceb4618d348f834bcfb7edab4a52f9095c5f33d45
