@@ -7,6 +7,7 @@
 		<name>Nikoli</name>
 	</maintainer>
 	<use>
-        	<flag name='openssl'>Use OpenSSL instead of GMP (beware of the OpenSSL license), for Mac OS X users only, GMP is faster.</flag>
+		<flag name='openssl'>Use OpenSSL instead of GMP (beware of the OpenSSL license), for Mac OS X users only, GMP is faster.</flag>
+		<flag name='tommath'>Use libtommath instead of GMP (slow, but WTFPL)</flag>
 	</use>
 </pkgmetadata>
