@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*d0_blind_id-0.3 (08 Sep 2011)
+
+  08 Sep 2011; Nikoli <nikoli@lavabit.com> +d0_blind_id-0.3.ebuild,
+  d0_blind_id-9999.ebuild, metadata.xml:
+  version bump, add USE tommath, cosmetics
+
   05 Jul 2011; Nikoli <nikoli@lavabit.com> d0_blind_id-9999.ebuild:
   migrate to git-2 and EAPI4
 
